--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-14 sáb 16:41
+% Created 2020-11-16 seg 16:35
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org9888e2b}
+\label{sec:orgbd1f7a7}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -102,20 +102,20 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas}
-\label{sec:orgc60ef72}
+\label{sec:orge3451ec}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org9cbc678}
+\label{sec:org1e97c64}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:org26b5b07}
+\label{sec:orgd4d90ef}
 
 \begin{itemize}
 \item[{$\square$}] Identificar respostas das questões (forms)
@@ -182,20 +182,10 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \textbf{245459} &                      5.0 \\
 \end{longtable}
 \end{center}
-\subsection{Notas}
-\label{sec:orga10c9b4}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
-\end{center}
-\subsection{Notas e Presença}
-\label{sec:org9b86f48}
-\begin{center}
-\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
-\end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:org09dddd4}
+\label{sec:org6388944}
 \subsubsection{Sorteio}
-\label{sec:org4cef2d1}
+\label{sec:org925b853}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["238414"]
@@ -221,21 +211,22 @@ resultado
 \begin{verbatim}
 RA Sorteados
 1        156242
-2        187323
-3        212900
-4        219613
-5        219907
+2        201326
+3        218090
+4        221515
+5        222315
 6        222615
-7        231302
-8        232796
-9        239052
-10       240409
-11       244321
-12       244379
-13       245459
+7        233747
+8        237618
+9        244321
+10       244379
+11       245212
+12       245459
+13       255241
 \end{verbatim}
+
 \subsubsection{Resultado Turnitin}
-\label{sec:orgdad0978}
+\label{sec:org2e17c29}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -257,21 +248,59 @@ RA & Grau de semelhança\\
 240409 & 0\%\\
 244321 & 1\%\\
 244379 & 1\%\\
-245459 & \\
+245459 & 53\%\\
 \hline
 \end{tabular}
 \end{table}
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org84adbc5}
+\label{sec:org4d4c63e}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
+\item Atualização das notas
+\label{sec:orga78fe84}
 \end{enumerate}
 
+
+\subsection{Notas}
+\label{sec:orge4e00ce}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
+\end{center}
+\subsection{Notas e Presença}
+\label{sec:org28939e3}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
+\end{center}
+\subsection{Questões}
+\label{sec:orgc21cc48}
+
+\begin{verbatim}
+Sobreposição das respostas 0.717948717948718%
+\end{verbatim}
+
+\subsubsection{Importando pacotes e funções}
+\label{sec:org1e9f496}
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
+\end{center}
+
+
+\begin{tabular}{llllrr}
+\toprule
+{} &     Q1 &     Q2 &                                      Justificativa &  Nota\_1 &  Nota\_2 \\
+Carimbo de data/hora         &        &        &                                                    &         &         \\
+\midrule
+2020/11/09 10:09:49 AM GMT-3 &  Falso &  Falso &  Se os agentes antecipam a expansão monetária, ... &       1 &       1 \\
+\bottomrule
+\end{tabular}
+
+
 \section{Lista de presença e notas}
-\label{sec:orgd9c632c}
+\label{sec:orgae9b3e1}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -310,7 +339,7 @@ RA & Grau de semelhança\\
 \textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &  j237618@dac.unicamp.br \\
 \textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &  j199735@dac.unicamp.br \\
 \textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      0.0 &  j238414@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &  j238414@dac.unicamp.br \\
 \textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &  k219613@dac.unicamp.br \\
 \textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &  l219907@dac.unicamp.br \\
 \textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &  l239052@dac.unicamp.br \\
@@ -332,15 +361,15 @@ RA & Grau de semelhança\\
 \textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &  t206194@dac.unicamp.br \\
 \textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &  v245212@dac.unicamp.br \\
 \textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      5.0 &  v245459@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &  v245459@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 
 
 \section{Seminários}
-\label{sec:org62ac50b}
+\label{sec:org3d8f9dd}
 \subsection{Sorteio}
-\label{sec:org773f78b}
+\label{sec:org9833b80}
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -349,23 +378,23 @@ RA & Grau de semelhança\\
 {} & Resultado \\
 Grupos   &           \\
 \midrule
-Grupo 1  &     Ata 7 \\
-Grupo 2  &     Ata 5 \\
-Grupo 3  &     Ata 1 \\
-Grupo 4  &    Ata 11 \\
-Grupo 5  &     Ata 8 \\
-Grupo 6  &     Ata 9 \\
-Grupo 7  &    Ata 12 \\
-Grupo 8  &    Ata 10 \\
-Grupo 9  &     Ata 2 \\
-Grupo 10 &     Ata 4 \\
-Grupo 11 &     Ata 6 \\
-Grupo 12 &     Ata 3 \\
+Grupo 1  &    Ata 11 \\
+Grupo 2  &    Ata 12 \\
+Grupo 3  &     Ata 5 \\
+Grupo 4  &     Ata 6 \\
+Grupo 5  &    Ata 10 \\
+Grupo 6  &     Ata 1 \\
+Grupo 7  &     Ata 4 \\
+Grupo 8  &     Ata 2 \\
+Grupo 9  &     Ata 9 \\
+Grupo 10 &     Ata 8 \\
+Grupo 11 &     Ata 3 \\
+Grupo 12 &     Ata 7 \\
 \bottomrule
 \end{tabular}
 \end{table}
 
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituir}
-\label{sec:org6f8c4e8}
+\label{sec:orgcccc87f}
 \end{document}
