--- a/Materias/2S2020/PED_CE342/Turma_C/235042.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/235042.org
@@ -38,14 +38,14 @@
 
 * Resenha 2: Novos Clássicos                                        :private:
   :PROPERTIES:
-  :TAREFA:
-  :OBJETIVO:
-  :ARGUMENTO:
-  :CONCEITOS:
-  :DESENVOLVIMENTO:
-  :CONCLUSAO:
-  :CLAREZA:
-  :NOTA:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais
