--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-14 sáb 16:36
+% Created 2020-11-16 seg 17:05
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org4eea7d7}
+\label{sec:orgcadb620}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -95,20 +95,20 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas}
-\label{sec:orgfd4f549}
+\label{sec:org06f12cb}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org62624f5}
+\label{sec:org4c5993c}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:org65cceb5}
+\label{sec:orgb5ded09}
 
 \begin{itemize}
 \item[{$\square$}] Computar notas Forms
@@ -168,19 +168,19 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:orge2d0c72}
+\label{sec:org01e198a}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 \subsection{Notas e Presença}
-\label{sec:org5250dbe}
+\label{sec:orgb1d336e}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:orgf8bede2}
+\label{sec:org2fe8518}
 \subsubsection{Sorteio}
-\label{sec:orge41a026}
+\label{sec:org53205d9}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["216397", "235042"]
@@ -222,7 +222,7 @@ RA Sorteados
 
 
 \subsubsection{Resultado Turnitin \textit{<2020-11-14 sáb>}}
-\label{sec:org94e4033}
+\label{sec:org8e40c94}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -250,15 +250,31 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:orgfaaa9d1}
+\label{sec:org5a9160b}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
+
+\item Atualizando notas
+\label{sec:org5186c97}
 \end{enumerate}
+
+\subsection{Questões}
+\label{sec:orgbd2b8b3}
+
+
+\subsubsection{Importando pacotes e funções}
+\label{sec:orgb939de2}
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/similarity_forms_1.png}
+\end{center}
+
+
 
 
 \section{Lista de presença e notas}
-\label{sec:org6706ec0}
+\label{sec:org3b2c808}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -285,10 +301,10 @@ RA & Grau de semelhança\\
 \textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  f215626@dac.unicamp.br \\
 \textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &   f91108@dac.unicamp.br \\
 \textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &  f234311@dac.unicamp.br \\
-\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      0.0 &  g216397@dac.unicamp.br \\
+\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &  g216397@dac.unicamp.br \\
 \textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &  g197474@dac.unicamp.br \\
 \textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &  g234982@dac.unicamp.br \\
-\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &  g235042@dac.unicamp.br \\
+\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &  g235042@dac.unicamp.br \\
 \textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &  g197724@dac.unicamp.br \\
 \textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &  g217350@dac.unicamp.br \\
 \textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &  g174154@dac.unicamp.br \\
@@ -319,9 +335,9 @@ RA & Grau de semelhança\\
 
 
 \section{Seminários}
-\label{sec:org81384fa}
+\label{sec:org0959b4f}
 \subsection{Sorteio}
-\label{sec:orgf557a80}
+\label{sec:org815c0cd}
 \begin{table}
 \centering
 \caption{Resultado sorteio das atas - Seminários}
@@ -330,22 +346,22 @@ RA & Grau de semelhança\\
 {} & Resultado \\
 Grupos   &           \\
 \midrule
-Grupo 1  &    Ata 10 \\
-Grupo 2  &     Ata 8 \\
-Grupo 3  &    Ata 12 \\
-Grupo 4  &     Ata 2 \\
-Grupo 5  &     Ata 3 \\
-Grupo 6  &     Ata 1 \\
-Grupo 7  &    Ata 11 \\
-Grupo 8  &     Ata 4 \\
-Grupo 9  &     Ata 9 \\
-Grupo 10 &     Ata 7 \\
-Grupo 11 &     Ata 6 \\
-Grupo 12 &     Ata 5 \\
+Grupo 1  &     Ata 6 \\
+Grupo 2  &     Ata 3 \\
+Grupo 3  &    Ata 10 \\
+Grupo 4  &    Ata 12 \\
+Grupo 5  &     Ata 8 \\
+Grupo 6  &    Ata 11 \\
+Grupo 7  &     Ata 5 \\
+Grupo 8  &     Ata 1 \\
+Grupo 9  &     Ata 2 \\
+Grupo 10 &     Ata 9 \\
+Grupo 11 &     Ata 7 \\
+Grupo 12 &     Ata 4 \\
 \bottomrule
 \end{tabular}
 \end{table}
 
 \subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituição}
-\label{sec:orgc3a5012}
+\label{sec:org8363e9c}
 \end{document}
